objects/Migration_Statistics_Line_Items__c.object
<CustomObject>
    <fields>
        <fullName>Bad__c</fullName>
        <label>Bad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created__c</fullName>
        <label>Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Etracted__c</fullName>
        <label>Etracted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Finish_Time__c</fullName>
        <label>Finish Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Migration_Statistics__c</fullName>
        <label>Migration Statistics</label>
        <referenceTo>Migration_Statistics__c</referenceTo>
        <relationshipLabel>Migration Statistics Line Items</relationshipLabel>
        <relationshipName>Migration_Statistics_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <formula>(Finish_Time__c - Start_Time__c) * 1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time in Mins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Counts__c</fullName>
        <label>Type of Counts</label>
        <picklist>
            <picklistValues>
                <fullName>Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Updated__c</fullName>
        <label>Updated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Migration Statistics Line Items</label>
    <nameField>
        <displayFormat>MI-{0000000}</displayFormat>
        <label>Migration Statistics Line Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Migration Statistics Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>